[gd_scene load_steps=13 format=3 uid="uid://bwnsyfjifojh7"]

[ext_resource type="Script" path="res://scripts/monster_select.gd" id="1_8yj5c"]
[ext_resource type="LabelSettings" uid="uid://cfnklpbe13q43" path="res://other/button.tres" id="2_8jlak"]
[ext_resource type="Texture2D" uid="uid://btvsb2dxer8jy" path="res://assets/racoon.png" id="3_i1w81"]
[ext_resource type="Texture2D" uid="uid://dbpf0uipwiir5" path="res://assets/dog.png" id="4_og2rx"]
[ext_resource type="Texture2D" uid="uid://dhri8gx2ql6ua" path="res://assets/squirrel.png" id="5_vxetk"]

[sub_resource type="LabelSettings" id="LabelSettings_pxt7d"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_5ggro"]
line_spacing = 70.0
font_size = 70
font_color = Color(0.86, 0.58824, 0.1806, 1)
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.772549)

[sub_resource type="Animation" id="Animation_1b1qr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RcButton/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(62, 33)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DgButton/Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(65.625, 48)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SqButton/Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(62, 33)]
}

[sub_resource type="Animation" id="Animation_xgya2"]
resource_name = "dogSelect"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DgButton/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0666667, 0.566667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(65.625, 48), Vector2(69, 36)]
}

[sub_resource type="Animation" id="Animation_poaso"]
resource_name = "racoonSelect"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RcButton/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(62, 33), Vector2(63, 23)]
}

[sub_resource type="Animation" id="Animation_46ogf"]
resource_name = "squirrelSelect"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SqButton/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.533333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(62, 33), Vector2(62, 23)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_36y13"]
_data = {
"RESET": SubResource("Animation_1b1qr"),
"dogSelect": SubResource("Animation_xgya2"),
"racoonSelect": SubResource("Animation_poaso"),
"squirrelSelect": SubResource("Animation_46ogf")
}

[node name="MonsterSelect" type="Node2D"]
script = ExtResource("1_8yj5c")

[node name="Outline" type="ColorRect" parent="."]
z_index = 2
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(20.186, 11.0233)
mouse_filter = 1
color = Color(0, 0, 0, 1)

[node name="Inline" type="ColorRect" parent="."]
z_index = 2
offset_left = 10.0
offset_top = 10.0
offset_right = 49.0
offset_bottom = 48.0
scale = Vector2(20.186, 11.0233)
mouse_filter = 2

[node name="WickedLazyFix" type="ColorRect" parent="."]
offset_left = -115.0
offset_top = -93.0
offset_right = -106.0
offset_bottom = -24.0
scale = Vector2(13.54, 9.0985)
mouse_filter = 1
color = Color(1, 1, 1, 0)

[node name="WickedLazyFix2" type="ColorRect" parent="."]
offset_left = 804.0
offset_top = -81.0
offset_right = 813.0
offset_bottom = -12.0
scale = Vector2(13.54, 9.0985)
mouse_filter = 1
color = Color(1, 1, 1, 0)

[node name="ExitButton" type="Button" parent="."]
z_index = 2
offset_left = 12.0
offset_top = 11.0
offset_right = 20.0
offset_bottom = 19.0
text = "
                                "
flat = true

[node name="ColorRect" type="ColorRect" parent="ExitButton"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(3.56, 1.36)
mouse_filter = 2
color = Color(0.5, 0.5, 0.5, 1)

[node name="Label" type="Label" parent="ExitButton"]
layout_mode = 0
offset_left = 11.0
offset_top = -7.0
offset_right = 114.0
offset_bottom = 62.0
text = "EXIT"
label_settings = ExtResource("2_8jlak")

[node name="RcButton" type="Button" parent="."]
z_index = 3
offset_left = 72.0
offset_top = 174.0
offset_right = 176.0
offset_bottom = 281.0
text = "
"
flat = true

[node name="Sprite2D" type="Sprite2D" parent="RcButton"]
z_index = 2
position = Vector2(62, 33)
scale = Vector2(0.33875, 0.3875)
texture = ExtResource("3_i1w81")

[node name="Label2" type="Label" parent="RcButton"]
z_index = 3
layout_mode = 0
offset_left = 21.0
offset_top = 118.0
offset_right = 79.0
offset_bottom = 141.0
text = "Racoon
-Balanced stats"
label_settings = SubResource("LabelSettings_pxt7d")

[node name="DgButton" type="Button" parent="."]
z_index = 3
offset_left = 335.0
offset_top = 181.0
offset_right = 439.0
offset_bottom = 290.0
flat = true

[node name="Sprite2D" type="Sprite2D" parent="DgButton"]
z_index = 2
position = Vector2(65.625, 48)
scale = Vector2(0.356875, 0.33)
texture = ExtResource("4_og2rx")

[node name="Label2" type="Label" parent="DgButton"]
z_index = 3
layout_mode = 0
offset_left = 35.0
offset_top = 119.0
offset_right = 93.0
offset_bottom = 142.0
text = "Dog
-High attack
-High speed
-Low health"
label_settings = SubResource("LabelSettings_pxt7d")

[node name="SqButton" type="Button" parent="."]
z_index = 3
offset_left = 572.0
offset_top = 184.0
offset_right = 680.0
offset_bottom = 289.0
flat = true

[node name="Sprite2D" type="Sprite2D" parent="SqButton"]
z_index = 2
position = Vector2(62, 33)
scale = Vector2(0.33875, 0.3875)
texture = ExtResource("5_vxetk")

[node name="Label2" type="Label" parent="SqButton"]
z_index = 3
layout_mode = 0
offset_left = 30.0
offset_top = 117.0
offset_right = 91.0
offset_bottom = 140.0
text = "Squirrel
-High defense
-Low power"
label_settings = SubResource("LabelSettings_pxt7d")

[node name="Label" type="Label" parent="."]
z_index = 3
offset_left = 59.0
offset_top = 65.0
offset_right = 708.0
offset_bottom = 161.0
text = "Select your Animal!"
label_settings = SubResource("LabelSettings_5ggro")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_36y13")
}

[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="mouse_entered" from="RcButton" to="." method="_on_rc_button_mouse_entered"]
[connection signal="mouse_exited" from="RcButton" to="." method="_on_rc_button_mouse_exited"]
[connection signal="pressed" from="RcButton" to="." method="_on_rc_button_pressed"]
[connection signal="mouse_entered" from="DgButton" to="." method="_on_dg_button_mouse_entered"]
[connection signal="mouse_exited" from="DgButton" to="." method="_on_dg_button_mouse_exited"]
[connection signal="pressed" from="DgButton" to="." method="_on_dg_button_pressed"]
[connection signal="mouse_entered" from="SqButton" to="." method="_on_sq_button_mouse_entered"]
[connection signal="mouse_exited" from="SqButton" to="." method="_on_sq_button_mouse_exited"]
[connection signal="pressed" from="SqButton" to="." method="_on_sq_button_pressed"]
